<resources>
    <string name="app_name">身体数据记录</string>
    <string name="uric_acid_val">尿酸值</string>
    <string name="blood_sugar_val">血糖值</string>
    <string name="blood_upper_pressure_val">上压</string>
    <string name="blood_lower_pressure_val">下压</string>
    <string name="hear_beat_val">心率</string>
    <string name="submission">submission</string>
    <string name="view_historical_body_data">查看过往身体数据</string>
    <string name="record_uric_acid_val">录入尿酸数据</string>
    <string name="record_blood_pressure_val">录入血压数据</string>
    <string name="edit_uric_acid_val">修改尿酸数据</string>
    <string name="edit_blood_pressure_val">修改血压数据</string>
    <string name="confirm">确定</string>
    <string name="cancel">取消</string>
    <string name="uric_acid_unit">μmol/L</string>
    <string name="blood_sugar_unit">mmol/L</string>
    <string name="blood_pressure_unit">mmHg</string>
    <string name="heart_beat_unit">bpm</string>
    <string name="blood_pressure_history">血压记录</string>
    <string name="uric_acid_history">尿酸记录</string>
    <string name="edit">编辑</string>
    <string name="content_in_table">列表 </string>
    <string name="content_in_graph">图表</string>
    <string name="database_name">BodyMonitoring.db</string>
    <string name="uric_acid_table_name_in_db">UricAcid</string>
    <string name="blood_pressure_table_name_in_db">BloodPressure</string>
    <string name="date">日期</string>
    <string name="time">时间</string>
    <string name="time_period">时间范围</string>
    <string name="all">全部</string>
    <string name="past_year">过去一年</string>
    <string name="past_month">过去一月</string>
    <string name="past_week">过去一周</string>
</resources>