<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".activities.ViewBodyData">


    <TextView
        android:id="@+id/info_window_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:background="@drawable/info_window_bondary"
        android:elevation="5dp"
        android:visibility="gone" />
    <ImageButton
        android:id="@+id/cancel_info_window"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/ic_baseline_close_24"
        app:layout_constraintTop_toTopOf="@+id/info_window_text"
        app:layout_constraintEnd_toEndOf="@+id/info_window_text"
        android:layout_marginEnd="20dp"
        android:elevation="10dp"
        android:visibility="gone"/>


    <RadioGroup
        android:id="@+id/view_data_presentation_button_group"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintTop_toTopOf="parent">

        <RadioButton
            android:id="@+id/view_table_radio_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:button="@null"
            android:text="@string/content_in_table"
            style="@style/choose_style_button_tag_style"/>

        <RadioButton
            android:id="@+id/view_graph_radio_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:button="@null"
            android:text="@string/content_in_graph"
            style="@style/choose_style_button_tag_style"/>
    </RadioGroup>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/all"
        android:drawableTop="@drawable/ic_baseline_timelapse_24"
        android:textSize="20sp"
        android:gravity="center_vertical"
        android:id="@+id/view_data_time_period_hint_button"
        app:layout_constraintTop_toBottomOf="@id/view_data_presentation_button_group"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/view_data_fl_container"/>



    <FrameLayout
        android:id="@+id/view_data_fl_container"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@+id/view_data_type_button_group"
        app:layout_constraintTop_toBottomOf="@id/view_data_time_period_hint_button" />

    <RadioGroup
        android:id="@+id/view_data_type_button_group"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent">

        <RadioButton
            android:id="@+id/view_bp_radio_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:button="@null"
            android:drawableTop="@drawable/tab_pic_selector"
            android:text="@string/blood_pressure_history"
            android:textColor="@drawable/tab_word_selector"
            style="@style/button_tag_style"/>

        <RadioButton
            android:id="@+id/view_ua_radio_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:button="@null"
            android:drawableTop="@drawable/tab_pic_selector"
            android:text="@string/uric_acid_history"
            android:textColor="@drawable/tab_word_selector"
            style="@style/button_tag_style"/>
    </RadioGroup>


</androidx.constraintlayout.widget.ConstraintLayout>