<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RecordBloodPressure">

    <TextView
        android:id="@+id/upper_bp_val_hint"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/blood_upper_pressure_val"
        android:textSize="20sp"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="70dp"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="10dp"
        />

    <EditText
        android:id="@+id/upper_bp_input"
        android:textSize="20sp"
        android:layout_width="80dp"
        android:inputType="number"
        android:layout_height="wrap_content"
        android:background="#D3D3D3"
        app:layout_constraintStart_toEndOf="@+id/upper_bp_val_hint"
        android:layout_marginStart="20dp"
        app:layout_constraintTop_toTopOf="@+id/upper_bp_val_hint"
        />

    <TextView
        android:id="@+id/lower_bp_val_hint"
        android:textSize="20sp"
        android:text="@string/blood_lower_pressure_val"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/upper_bp_val_hint"
        android:layout_marginTop="70dp"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="10dp"
        />

    <EditText
        android:id="@+id/lower_bp_input"
        android:textSize="20sp"
        android:layout_width="80dp"
        android:inputType="number"
        android:layout_height="wrap_content"
        android:background="#D3D3D3"
        app:layout_constraintTop_toTopOf="@+id/lower_bp_val_hint"
        app:layout_constraintStart_toEndOf="@+id/lower_bp_val_hint"
        android:layout_marginStart="20dp"
        />

    <TextView
        android:id="@+id/heart_beat_val_hint"
        android:textSize="20sp"
        android:text="@string/hear_beat_val"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/lower_bp_val_hint"
        android:layout_marginTop="70dp"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="10dp"
        />

    <EditText
        android:id="@+id/heart_beat_input"
        android:textSize="20sp"
        android:layout_width="80dp"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:background="#D3D3D3"
        app:layout_constraintTop_toTopOf="@+id/heart_beat_val_hint"
        app:layout_constraintStart_toEndOf="@id/heart_beat_val_hint"
        android:layout_marginStart="20dp"
        />


</androidx.constraintlayout.widget.ConstraintLayout>